[gd_scene load_steps=23 format=3 uid="uid://cgpwwrh16mha1"]

[ext_resource type="Script" uid="uid://y0di6ykwmqcn" path="res://Objects/basketball_hoop.gd" id="1_8j0dg"]
[ext_resource type="Texture2D" uid="uid://c1fthr0wihqbf" path="res://Sprites/6packrings.png" id="2_bd8j0"]
[ext_resource type="Texture2D" uid="uid://g1tghrh1i6o5" path="res://Textures/rust.png" id="2_hcfjh"]
[ext_resource type="Texture2D" uid="uid://d0lx7l3a52xjm" path="res://Textures/wood.png" id="4_drutj"]
[ext_resource type="Texture2D" uid="uid://cfqinysh8s55u" path="res://Sprites/squarepaint.png" id="5_vn1wo"]
[ext_resource type="AudioStream" uid="uid://crsont6mavx04" path="res://Sounds/tricks/slam_dunk.ogg" id="6_npxaw"]
[ext_resource type="AudioStream" uid="uid://bgbcr5bw0mvxk" path="res://Sounds/slomo_resume_shorter.ogg" id="7_evkxb"]
[ext_resource type="AudioStream" uid="uid://csyvaicdfvcfa" path="res://Sounds/slomo.ogg" id="8_evkxb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iqjpu"]
height = 0.259512
radius = 1.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_drutj"]
albedo_texture = ExtResource("2_hcfjh")
metallic_specular = 0.71

[sub_resource type="TorusMesh" id="TorusMesh_3ffwv"]
inner_radius = 1.0
outer_radius = 1.8
rings = 16
ring_segments = 8

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_1bd7p"]
data = PackedVector3Array(-0.3827, 0, -0.9239, 0, 0.2828, -1.1172, 0, 0, -1, -0.3827, 0, -0.9239, -0.4275, 0.2828, -1.0321, 0, 0.2828, -1.1172, -0.4275, 0.2828, -1.0321, 0, 0.4, -1.4, 0, 0.2828, -1.1172, -0.4275, 0.2828, -1.0321, -0.5358, 0.4, -1.2934, 0, 0.4, -1.4, -0.5358, 0.4, -1.2934, 0, 0.2828, -1.6828, 0, 0.4, -1.4, -0.5358, 0.4, -1.2934, -0.644, 0.2828, -1.5547, 0, 0.2828, -1.6828, -0.644, 0.2828, -1.5547, 0, 0, -1.8, 0, 0.2828, -1.6828, -0.644, 0.2828, -1.5547, -0.6888, 0, -1.663, 0, 0, -1.8, -0.6888, 0, -1.663, 0, -0.2828, -1.6828, 0, 0, -1.8, -0.6888, 0, -1.663, -0.644, -0.2828, -1.5547, 0, -0.2828, -1.6828, -0.644, -0.2828, -1.5547, 0, -0.4, -1.4, 0, -0.2828, -1.6828, -0.644, -0.2828, -1.5547, -0.5358, -0.4, -1.2934, 0, -0.4, -1.4, -0.5358, -0.4, -1.2934, 0, -0.2828, -1.1172, 0, -0.4, -1.4, -0.5358, -0.4, -1.2934, -0.4275, -0.2828, -1.0321, 0, -0.2828, -1.1172, -0.4275, -0.2828, -1.0321, 0, 0, -1, 0, -0.2828, -1.1172, -0.4275, -0.2828, -1.0321, -0.3827, 0, -0.9239, 0, 0, -1, -0.7071, 0, -0.7071, -0.4275, 0.2828, -1.0321, -0.3827, 0, -0.9239, -0.7071, 0, -0.7071, -0.7899, 0.2828, -0.7899, -0.4275, 0.2828, -1.0321, -0.7899, 0.2828, -0.7899, -0.5358, 0.4, -1.2934, -0.4275, 0.2828, -1.0321, -0.7899, 0.2828, -0.7899, -0.9899, 0.4, -0.9899, -0.5358, 0.4, -1.2934, -0.9899, 0.4, -0.9899, -0.644, 0.2828, -1.5547, -0.5358, 0.4, -1.2934, -0.9899, 0.4, -0.9899, -1.1899, 0.2828, -1.1899, -0.644, 0.2828, -1.5547, -1.1899, 0.2828, -1.1899, -0.6888, 0, -1.663, -0.644, 0.2828, -1.5547, -1.1899, 0.2828, -1.1899, -1.2728, 0, -1.2728, -0.6888, 0, -1.663, -1.2728, 0, -1.2728, -0.644, -0.2828, -1.5547, -0.6888, 0, -1.663, -1.2728, 0, -1.2728, -1.1899, -0.2828, -1.1899, -0.644, -0.2828, -1.5547, -1.1899, -0.2828, -1.1899, -0.5358, -0.4, -1.2934, -0.644, -0.2828, -1.5547, -1.1899, -0.2828, -1.1899, -0.9899, -0.4, -0.9899, -0.5358, -0.4, -1.2934, -0.9899, -0.4, -0.9899, -0.4275, -0.2828, -1.0321, -0.5358, -0.4, -1.2934, -0.9899, -0.4, -0.9899, -0.7899, -0.2828, -0.7899, -0.4275, -0.2828, -1.0321, -0.7899, -0.2828, -0.7899, -0.3827, 0, -0.9239, -0.4275, -0.2828, -1.0321, -0.7899, -0.2828, -0.7899, -0.7071, 0, -0.7071, -0.3827, 0, -0.9239, -0.9239, 0, -0.3827, -0.7899, 0.2828, -0.7899, -0.7071, 0, -0.7071, -0.9239, 0, -0.3827, -1.0321, 0.2828, -0.4275, -0.7899, 0.2828, -0.7899, -1.0321, 0.2828, -0.4275, -0.9899, 0.4, -0.9899, -0.7899, 0.2828, -0.7899, -1.0321, 0.2828, -0.4275, -1.2934, 0.4, -0.5358, -0.9899, 0.4, -0.9899, -1.2934, 0.4, -0.5358, -1.1899, 0.2828, -1.1899, -0.9899, 0.4, -0.9899, -1.2934, 0.4, -0.5358, -1.5547, 0.2828, -0.644, -1.1899, 0.2828, -1.1899, -1.5547, 0.2828, -0.644, -1.2728, 0, -1.2728, -1.1899, 0.2828, -1.1899, -1.5547, 0.2828, -0.644, -1.663, 0, -0.6888, -1.2728, 0, -1.2728, -1.663, 0, -0.6888, -1.1899, -0.2828, -1.1899, -1.2728, 0, -1.2728, -1.663, 0, -0.6888, -1.5547, -0.2828, -0.644, -1.1899, -0.2828, -1.1899, -1.5547, -0.2828, -0.644, -0.9899, -0.4, -0.9899, -1.1899, -0.2828, -1.1899, -1.5547, -0.2828, -0.644, -1.2934, -0.4, -0.5358, -0.9899, -0.4, -0.9899, -1.2934, -0.4, -0.5358, -0.7899, -0.2828, -0.7899, -0.9899, -0.4, -0.9899, -1.2934, -0.4, -0.5358, -1.0321, -0.2828, -0.4275, -0.7899, -0.2828, -0.7899, -1.0321, -0.2828, -0.4275, -0.7071, 0, -0.7071, -0.7899, -0.2828, -0.7899, -1.0321, -0.2828, -0.4275, -0.9239, 0, -0.3827, -0.7071, 0, -0.7071, -1, 0, 0, -1.0321, 0.2828, -0.4275, -0.9239, 0, -0.3827, -1, 0, 0, -1.1172, 0.2828, 0, -1.0321, 0.2828, -0.4275, -1.1172, 0.2828, 0, -1.2934, 0.4, -0.5358, -1.0321, 0.2828, -0.4275, -1.1172, 0.2828, 0, -1.4, 0.4, 0, -1.2934, 0.4, -0.5358, -1.4, 0.4, 0, -1.5547, 0.2828, -0.644, -1.2934, 0.4, -0.5358, -1.4, 0.4, 0, -1.6828, 0.2828, 0, -1.5547, 0.2828, -0.644, -1.6828, 0.2828, 0, -1.663, 0, -0.6888, -1.5547, 0.2828, -0.644, -1.6828, 0.2828, 0, -1.8, 0, 0, -1.663, 0, -0.6888, -1.8, 0, 0, -1.5547, -0.2828, -0.644, -1.663, 0, -0.6888, -1.8, 0, 0, -1.6828, -0.2828, 0, -1.5547, -0.2828, -0.644, -1.6828, -0.2828, 0, -1.2934, -0.4, -0.5358, -1.5547, -0.2828, -0.644, -1.6828, -0.2828, 0, -1.4, -0.4, 0, -1.2934, -0.4, -0.5358, -1.4, -0.4, 0, -1.0321, -0.2828, -0.4275, -1.2934, -0.4, -0.5358, -1.4, -0.4, 0, -1.1172, -0.2828, 0, -1.0321, -0.2828, -0.4275, -1.1172, -0.2828, 0, -0.9239, 0, -0.3827, -1.0321, -0.2828, -0.4275, -1.1172, -0.2828, 0, -1, 0, 0, -0.9239, 0, -0.3827, -0.9239, 0, 0.3827, -1.1172, 0.2828, 0, -1, 0, 0, -0.9239, 0, 0.3827, -1.0321, 0.2828, 0.4275, -1.1172, 0.2828, 0, -1.0321, 0.2828, 0.4275, -1.4, 0.4, 0, -1.1172, 0.2828, 0, -1.0321, 0.2828, 0.4275, -1.2934, 0.4, 0.5358, -1.4, 0.4, 0, -1.2934, 0.4, 0.5358, -1.6828, 0.2828, 0, -1.4, 0.4, 0, -1.2934, 0.4, 0.5358, -1.5547, 0.2828, 0.644, -1.6828, 0.2828, 0, -1.5547, 0.2828, 0.644, -1.8, 0, 0, -1.6828, 0.2828, 0, -1.5547, 0.2828, 0.644, -1.663, 0, 0.6888, -1.8, 0, 0, -1.663, 0, 0.6888, -1.6828, -0.2828, 0, -1.8, 0, 0, -1.663, 0, 0.6888, -1.5547, -0.2828, 0.644, -1.6828, -0.2828, 0, -1.5547, -0.2828, 0.644, -1.4, -0.4, 0, -1.6828, -0.2828, 0, -1.5547, -0.2828, 0.644, -1.2934, -0.4, 0.5358, -1.4, -0.4, 0, -1.2934, -0.4, 0.5358, -1.1172, -0.2828, 0, -1.4, -0.4, 0, -1.2934, -0.4, 0.5358, -1.0321, -0.2828, 0.4275, -1.1172, -0.2828, 0, -1.0321, -0.2828, 0.4275, -1, 0, 0, -1.1172, -0.2828, 0, -1.0321, -0.2828, 0.4275, -0.9239, 0, 0.3827, -1, 0, 0, -0.7071, 0, 0.7071, -1.0321, 0.2828, 0.4275, -0.9239, 0, 0.3827, -0.7071, 0, 0.7071, -0.7899, 0.2828, 0.7899, -1.0321, 0.2828, 0.4275, -0.7899, 0.2828, 0.7899, -1.2934, 0.4, 0.5358, -1.0321, 0.2828, 0.4275, -0.7899, 0.2828, 0.7899, -0.9899, 0.4, 0.9899, -1.2934, 0.4, 0.5358, -0.9899, 0.4, 0.9899, -1.5547, 0.2828, 0.644, -1.2934, 0.4, 0.5358, -0.9899, 0.4, 0.9899, -1.1899, 0.2828, 1.1899, -1.5547, 0.2828, 0.644, -1.1899, 0.2828, 1.1899, -1.663, 0, 0.6888, -1.5547, 0.2828, 0.644, -1.1899, 0.2828, 1.1899, -1.2728, 0, 1.2728, -1.663, 0, 0.6888, -1.2728, 0, 1.2728, -1.5547, -0.2828, 0.644, -1.663, 0, 0.6888, -1.2728, 0, 1.2728, -1.1899, -0.2828, 1.1899, -1.5547, -0.2828, 0.644, -1.1899, -0.2828, 1.1899, -1.2934, -0.4, 0.5358, -1.5547, -0.2828, 0.644, -1.1899, -0.2828, 1.1899, -0.9899, -0.4, 0.9899, -1.2934, -0.4, 0.5358, -0.9899, -0.4, 0.9899, -1.0321, -0.2828, 0.4275, -1.2934, -0.4, 0.5358, -0.9899, -0.4, 0.9899, -0.7899, -0.2828, 0.7899, -1.0321, -0.2828, 0.4275, -0.7899, -0.2828, 0.7899, -0.9239, 0, 0.3827, -1.0321, -0.2828, 0.4275, -0.7899, -0.2828, 0.7899, -0.7071, 0, 0.7071, -0.9239, 0, 0.3827, -0.3827, 0, 0.9239, -0.7899, 0.2828, 0.7899, -0.7071, 0, 0.7071, -0.3827, 0, 0.9239, -0.4275, 0.2828, 1.0321, -0.7899, 0.2828, 0.7899, -0.4275, 0.2828, 1.0321, -0.9899, 0.4, 0.9899, -0.7899, 0.2828, 0.7899, -0.4275, 0.2828, 1.0321, -0.5358, 0.4, 1.2934, -0.9899, 0.4, 0.9899, -0.5358, 0.4, 1.2934, -1.1899, 0.2828, 1.1899, -0.9899, 0.4, 0.9899, -0.5358, 0.4, 1.2934, -0.644, 0.2828, 1.5547, -1.1899, 0.2828, 1.1899, -0.644, 0.2828, 1.5547, -1.2728, 0, 1.2728, -1.1899, 0.2828, 1.1899, -0.644, 0.2828, 1.5547, -0.6888, 0, 1.663, -1.2728, 0, 1.2728, -0.6888, 0, 1.663, -1.1899, -0.2828, 1.1899, -1.2728, 0, 1.2728, -0.6888, 0, 1.663, -0.644, -0.2828, 1.5547, -1.1899, -0.2828, 1.1899, -0.644, -0.2828, 1.5547, -0.9899, -0.4, 0.9899, -1.1899, -0.2828, 1.1899, -0.644, -0.2828, 1.5547, -0.5358, -0.4, 1.2934, -0.9899, -0.4, 0.9899, -0.5358, -0.4, 1.2934, -0.7899, -0.2828, 0.7899, -0.9899, -0.4, 0.9899, -0.5358, -0.4, 1.2934, -0.4275, -0.2828, 1.0321, -0.7899, -0.2828, 0.7899, -0.4275, -0.2828, 1.0321, -0.7071, 0, 0.7071, -0.7899, -0.2828, 0.7899, -0.4275, -0.2828, 1.0321, -0.3827, 0, 0.9239, -0.7071, 0, 0.7071, 0, 0, 1, -0.4275, 0.2828, 1.0321, -0.3827, 0, 0.9239, 0, 0, 1, 0, 0.2828, 1.1172, -0.4275, 0.2828, 1.0321, 0, 0.2828, 1.1172, -0.5358, 0.4, 1.2934, -0.4275, 0.2828, 1.0321, 0, 0.2828, 1.1172, 0, 0.4, 1.4, -0.5358, 0.4, 1.2934, 0, 0.4, 1.4, -0.644, 0.2828, 1.5547, -0.5358, 0.4, 1.2934, 0, 0.4, 1.4, 0, 0.2828, 1.6828, -0.644, 0.2828, 1.5547, 0, 0.2828, 1.6828, -0.6888, 0, 1.663, -0.644, 0.2828, 1.5547, 0, 0.2828, 1.6828, 0, 0, 1.8, -0.6888, 0, 1.663, 0, 0, 1.8, -0.644, -0.2828, 1.5547, -0.6888, 0, 1.663, 0, 0, 1.8, 0, -0.2828, 1.6828, -0.644, -0.2828, 1.5547, 0, -0.2828, 1.6828, -0.5358, -0.4, 1.2934, -0.644, -0.2828, 1.5547, 0, -0.2828, 1.6828, 0, -0.4, 1.4, -0.5358, -0.4, 1.2934, 0, -0.4, 1.4, -0.4275, -0.2828, 1.0321, -0.5358, -0.4, 1.2934, 0, -0.4, 1.4, 0, -0.2828, 1.1172, -0.4275, -0.2828, 1.0321, 0, -0.2828, 1.1172, -0.3827, 0, 0.9239, -0.4275, -0.2828, 1.0321, 0, -0.2828, 1.1172, 0, 0, 1, -0.3827, 0, 0.9239, 0.3827, 0, 0.9239, 0, 0.2828, 1.1172, 0, 0, 1, 0.3827, 0, 0.9239, 0.4275, 0.2828, 1.0321, 0, 0.2828, 1.1172, 0.4275, 0.2828, 1.0321, 0, 0.4, 1.4, 0, 0.2828, 1.1172, 0.4275, 0.2828, 1.0321, 0.5358, 0.4, 1.2934, 0, 0.4, 1.4, 0.5358, 0.4, 1.2934, 0, 0.2828, 1.6828, 0, 0.4, 1.4, 0.5358, 0.4, 1.2934, 0.644, 0.2828, 1.5547, 0, 0.2828, 1.6828, 0.644, 0.2828, 1.5547, 0, 0, 1.8, 0, 0.2828, 1.6828, 0.644, 0.2828, 1.5547, 0.6888, 0, 1.663, 0, 0, 1.8, 0.6888, 0, 1.663, 0, -0.2828, 1.6828, 0, 0, 1.8, 0.6888, 0, 1.663, 0.644, -0.2828, 1.5547, 0, -0.2828, 1.6828, 0.644, -0.2828, 1.5547, 0, -0.4, 1.4, 0, -0.2828, 1.6828, 0.644, -0.2828, 1.5547, 0.5358, -0.4, 1.2934, 0, -0.4, 1.4, 0.5358, -0.4, 1.2934, 0, -0.2828, 1.1172, 0, -0.4, 1.4, 0.5358, -0.4, 1.2934, 0.4275, -0.2828, 1.0321, 0, -0.2828, 1.1172, 0.4275, -0.2828, 1.0321, 0, 0, 1, 0, -0.2828, 1.1172, 0.4275, -0.2828, 1.0321, 0.3827, 0, 0.9239, 0, 0, 1, 0.7071, 0, 0.7071, 0.4275, 0.2828, 1.0321, 0.3827, 0, 0.9239, 0.7071, 0, 0.7071, 0.7899, 0.2828, 0.7899, 0.4275, 0.2828, 1.0321, 0.7899, 0.2828, 0.7899, 0.5358, 0.4, 1.2934, 0.4275, 0.2828, 1.0321, 0.7899, 0.2828, 0.7899, 0.9899, 0.4, 0.9899, 0.5358, 0.4, 1.2934, 0.9899, 0.4, 0.9899, 0.644, 0.2828, 1.5547, 0.5358, 0.4, 1.2934, 0.9899, 0.4, 0.9899, 1.1899, 0.2828, 1.1899, 0.644, 0.2828, 1.5547, 1.1899, 0.2828, 1.1899, 0.6888, 0, 1.663, 0.644, 0.2828, 1.5547, 1.1899, 0.2828, 1.1899, 1.2728, 0, 1.2728, 0.6888, 0, 1.663, 1.2728, 0, 1.2728, 0.644, -0.2828, 1.5547, 0.6888, 0, 1.663, 1.2728, 0, 1.2728, 1.1899, -0.2828, 1.1899, 0.644, -0.2828, 1.5547, 1.1899, -0.2828, 1.1899, 0.5358, -0.4, 1.2934, 0.644, -0.2828, 1.5547, 1.1899, -0.2828, 1.1899, 0.9899, -0.4, 0.9899, 0.5358, -0.4, 1.2934, 0.9899, -0.4, 0.9899, 0.4275, -0.2828, 1.0321, 0.5358, -0.4, 1.2934, 0.9899, -0.4, 0.9899, 0.7899, -0.2828, 0.7899, 0.4275, -0.2828, 1.0321, 0.7899, -0.2828, 0.7899, 0.3827, 0, 0.9239, 0.4275, -0.2828, 1.0321, 0.7899, -0.2828, 0.7899, 0.7071, 0, 0.7071, 0.3827, 0, 0.9239, 0.9239, 0, 0.3827, 0.7899, 0.2828, 0.7899, 0.7071, 0, 0.7071, 0.9239, 0, 0.3827, 1.0321, 0.2828, 0.4275, 0.7899, 0.2828, 0.7899, 1.0321, 0.2828, 0.4275, 0.9899, 0.4, 0.9899, 0.7899, 0.2828, 0.7899, 1.0321, 0.2828, 0.4275, 1.2934, 0.4, 0.5358, 0.9899, 0.4, 0.9899, 1.2934, 0.4, 0.5358, 1.1899, 0.2828, 1.1899, 0.9899, 0.4, 0.9899, 1.2934, 0.4, 0.5358, 1.5547, 0.2828, 0.644, 1.1899, 0.2828, 1.1899, 1.5547, 0.2828, 0.644, 1.2728, 0, 1.2728, 1.1899, 0.2828, 1.1899, 1.5547, 0.2828, 0.644, 1.663, 0, 0.6888, 1.2728, 0, 1.2728, 1.663, 0, 0.6888, 1.1899, -0.2828, 1.1899, 1.2728, 0, 1.2728, 1.663, 0, 0.6888, 1.5547, -0.2828, 0.644, 1.1899, -0.2828, 1.1899, 1.5547, -0.2828, 0.644, 0.9899, -0.4, 0.9899, 1.1899, -0.2828, 1.1899, 1.5547, -0.2828, 0.644, 1.2934, -0.4, 0.5358, 0.9899, -0.4, 0.9899, 1.2934, -0.4, 0.5358, 0.7899, -0.2828, 0.7899, 0.9899, -0.4, 0.9899, 1.2934, -0.4, 0.5358, 1.0321, -0.2828, 0.4275, 0.7899, -0.2828, 0.7899, 1.0321, -0.2828, 0.4275, 0.7071, 0, 0.7071, 0.7899, -0.2828, 0.7899, 1.0321, -0.2828, 0.4275, 0.9239, 0, 0.3827, 0.7071, 0, 0.7071, 1, 0, 0, 1.0321, 0.2828, 0.4275, 0.9239, 0, 0.3827, 1, 0, 0, 1.1172, 0.2828, 0, 1.0321, 0.2828, 0.4275, 1.1172, 0.2828, 0, 1.2934, 0.4, 0.5358, 1.0321, 0.2828, 0.4275, 1.1172, 0.2828, 0, 1.4, 0.4, 0, 1.2934, 0.4, 0.5358, 1.4, 0.4, 0, 1.5547, 0.2828, 0.644, 1.2934, 0.4, 0.5358, 1.4, 0.4, 0, 1.6828, 0.2828, 0, 1.5547, 0.2828, 0.644, 1.6828, 0.2828, 0, 1.663, 0, 0.6888, 1.5547, 0.2828, 0.644, 1.6828, 0.2828, 0, 1.8, 0, 0, 1.663, 0, 0.6888, 1.8, 0, 0, 1.5547, -0.2828, 0.644, 1.663, 0, 0.6888, 1.8, 0, 0, 1.6828, -0.2828, 0, 1.5547, -0.2828, 0.644, 1.6828, -0.2828, 0, 1.2934, -0.4, 0.5358, 1.5547, -0.2828, 0.644, 1.6828, -0.2828, 0, 1.4, -0.4, 0, 1.2934, -0.4, 0.5358, 1.4, -0.4, 0, 1.0321, -0.2828, 0.4275, 1.2934, -0.4, 0.5358, 1.4, -0.4, 0, 1.1172, -0.2828, 0, 1.0321, -0.2828, 0.4275, 1.1172, -0.2828, 0, 0.9239, 0, 0.3827, 1.0321, -0.2828, 0.4275, 1.1172, -0.2828, 0, 1, 0, 0, 0.9239, 0, 0.3827, 0.9239, 0, -0.3827, 1.1172, 0.2828, 0, 1, 0, 0, 0.9239, 0, -0.3827, 1.0321, 0.2828, -0.4275, 1.1172, 0.2828, 0, 1.0321, 0.2828, -0.4275, 1.4, 0.4, 0, 1.1172, 0.2828, 0, 1.0321, 0.2828, -0.4275, 1.2934, 0.4, -0.5358, 1.4, 0.4, 0, 1.2934, 0.4, -0.5358, 1.6828, 0.2828, 0, 1.4, 0.4, 0, 1.2934, 0.4, -0.5358, 1.5547, 0.2828, -0.644, 1.6828, 0.2828, 0, 1.5547, 0.2828, -0.644, 1.8, 0, 0, 1.6828, 0.2828, 0, 1.5547, 0.2828, -0.644, 1.663, 0, -0.6888, 1.8, 0, 0, 1.663, 0, -0.6888, 1.6828, -0.2828, 0, 1.8, 0, 0, 1.663, 0, -0.6888, 1.5547, -0.2828, -0.644, 1.6828, -0.2828, 0, 1.5547, -0.2828, -0.644, 1.4, -0.4, 0, 1.6828, -0.2828, 0, 1.5547, -0.2828, -0.644, 1.2934, -0.4, -0.5358, 1.4, -0.4, 0, 1.2934, -0.4, -0.5358, 1.1172, -0.2828, 0, 1.4, -0.4, 0, 1.2934, -0.4, -0.5358, 1.0321, -0.2828, -0.4275, 1.1172, -0.2828, 0, 1.0321, -0.2828, -0.4275, 1, 0, 0, 1.1172, -0.2828, 0, 1.0321, -0.2828, -0.4275, 0.9239, 0, -0.3827, 1, 0, 0, 0.7071, 0, -0.7071, 1.0321, 0.2828, -0.4275, 0.9239, 0, -0.3827, 0.7071, 0, -0.7071, 0.7899, 0.2828, -0.7899, 1.0321, 0.2828, -0.4275, 0.7899, 0.2828, -0.7899, 1.2934, 0.4, -0.5358, 1.0321, 0.2828, -0.4275, 0.7899, 0.2828, -0.7899, 0.9899, 0.4, -0.9899, 1.2934, 0.4, -0.5358, 0.9899, 0.4, -0.9899, 1.5547, 0.2828, -0.644, 1.2934, 0.4, -0.5358, 0.9899, 0.4, -0.9899, 1.1899, 0.2828, -1.1899, 1.5547, 0.2828, -0.644, 1.1899, 0.2828, -1.1899, 1.663, 0, -0.6888, 1.5547, 0.2828, -0.644, 1.1899, 0.2828, -1.1899, 1.2728, 0, -1.2728, 1.663, 0, -0.6888, 1.2728, 0, -1.2728, 1.5547, -0.2828, -0.644, 1.663, 0, -0.6888, 1.2728, 0, -1.2728, 1.1899, -0.2828, -1.1899, 1.5547, -0.2828, -0.644, 1.1899, -0.2828, -1.1899, 1.2934, -0.4, -0.5358, 1.5547, -0.2828, -0.644, 1.1899, -0.2828, -1.1899, 0.9899, -0.4, -0.9899, 1.2934, -0.4, -0.5358, 0.9899, -0.4, -0.9899, 1.0321, -0.2828, -0.4275, 1.2934, -0.4, -0.5358, 0.9899, -0.4, -0.9899, 0.7899, -0.2828, -0.7899, 1.0321, -0.2828, -0.4275, 0.7899, -0.2828, -0.7899, 0.9239, 0, -0.3827, 1.0321, -0.2828, -0.4275, 0.7899, -0.2828, -0.7899, 0.7071, 0, -0.7071, 0.9239, 0, -0.3827, 0.3827, 0, -0.9239, 0.7899, 0.2828, -0.7899, 0.7071, 0, -0.7071, 0.3827, 0, -0.9239, 0.4275, 0.2828, -1.0321, 0.7899, 0.2828, -0.7899, 0.4275, 0.2828, -1.0321, 0.9899, 0.4, -0.9899, 0.7899, 0.2828, -0.7899, 0.4275, 0.2828, -1.0321, 0.5358, 0.4, -1.2934, 0.9899, 0.4, -0.9899, 0.5358, 0.4, -1.2934, 1.1899, 0.2828, -1.1899, 0.9899, 0.4, -0.9899, 0.5358, 0.4, -1.2934, 0.644, 0.2828, -1.5547, 1.1899, 0.2828, -1.1899, 0.644, 0.2828, -1.5547, 1.2728, 0, -1.2728, 1.1899, 0.2828, -1.1899, 0.644, 0.2828, -1.5547, 0.6888, 0, -1.663, 1.2728, 0, -1.2728, 0.6888, 0, -1.663, 1.1899, -0.2828, -1.1899, 1.2728, 0, -1.2728, 0.6888, 0, -1.663, 0.644, -0.2828, -1.5547, 1.1899, -0.2828, -1.1899, 0.644, -0.2828, -1.5547, 0.9899, -0.4, -0.9899, 1.1899, -0.2828, -1.1899, 0.644, -0.2828, -1.5547, 0.5358, -0.4, -1.2934, 0.9899, -0.4, -0.9899, 0.5358, -0.4, -1.2934, 0.7899, -0.2828, -0.7899, 0.9899, -0.4, -0.9899, 0.5358, -0.4, -1.2934, 0.4275, -0.2828, -1.0321, 0.7899, -0.2828, -0.7899, 0.4275, -0.2828, -1.0321, 0.7071, 0, -0.7071, 0.7899, -0.2828, -0.7899, 0.4275, -0.2828, -1.0321, 0.3827, 0, -0.9239, 0.7071, 0, -0.7071, 0, 0, -1, 0.4275, 0.2828, -1.0321, 0.3827, 0, -0.9239, 0, 0, -1, 0, 0.2828, -1.1172, 0.4275, 0.2828, -1.0321, 0, 0.2828, -1.1172, 0.5358, 0.4, -1.2934, 0.4275, 0.2828, -1.0321, 0, 0.2828, -1.1172, 0, 0.4, -1.4, 0.5358, 0.4, -1.2934, 0, 0.4, -1.4, 0.644, 0.2828, -1.5547, 0.5358, 0.4, -1.2934, 0, 0.4, -1.4, 0, 0.2828, -1.6828, 0.644, 0.2828, -1.5547, 0, 0.2828, -1.6828, 0.6888, 0, -1.663, 0.644, 0.2828, -1.5547, 0, 0.2828, -1.6828, 0, 0, -1.8, 0.6888, 0, -1.663, 0, 0, -1.8, 0.644, -0.2828, -1.5547, 0.6888, 0, -1.663, 0, 0, -1.8, 0, -0.2828, -1.6828, 0.644, -0.2828, -1.5547, 0, -0.2828, -1.6828, 0.5358, -0.4, -1.2934, 0.644, -0.2828, -1.5547, 0, -0.2828, -1.6828, 0, -0.4, -1.4, 0.5358, -0.4, -1.2934, 0, -0.4, -1.4, 0.4275, -0.2828, -1.0321, 0.5358, -0.4, -1.2934, 0, -0.4, -1.4, 0, -0.2828, -1.1172, 0.4275, -0.2828, -1.0321, 0, -0.2828, -1.1172, 0.3827, 0, -0.9239, 0.4275, -0.2828, -1.0321, 0, -0.2828, -1.1172, 0, 0, -1, 0.3827, 0, -0.9239)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_npxaw"]
height = 1.3556
radius = 1.14209

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vn1wo"]
height = 3.0
radius = 1.7

[sub_resource type="BoxShape3D" id="BoxShape3D_evkxb"]
size = Vector3(2.6, 0.35, 2.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vn1wo"]
albedo_texture = ExtResource("4_drutj")

[sub_resource type="BoxMesh" id="BoxMesh_npxaw"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_drutj"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="SphereMesh" id="SphereMesh_vn1wo"]

[sub_resource type="Curve" id="Curve_npxaw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.105769), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_evkxb"]
streams_count = 1
stream_0/stream = ExtResource("7_evkxb")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ri3g6"]
streams_count = 1
stream_0/stream = ExtResource("8_evkxb")

[node name="Basketballhoop" type="Area3D"]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
collision_layer = 32
collision_mask = 18
script = ExtResource("1_8j0dg")

[node name="DunkArea" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.59859e-09, -0.171462, 0)
shape = SubResource("CylinderShape3D_iqjpu")
debug_color = Color(0.2024, 0.88, 0.484733, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.992619, 0, 0, 0, 0.742674, 0, 0, 0, 1.0652, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_drutj")
mesh = SubResource("TorusMesh_3ffwv")

[node name="hoopCollision" type="StaticBody3D" parent="MeshInstance3D"]
unique_name_in_owner = true

[node name="CollisionBody3D" type="CollisionShape3D" parent="MeshInstance3D/hoopCollision"]
shape = SubResource("ConcavePolygonShape3D_1bd7p")

[node name="slowmo" type="Area3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 7.89492e-15, 0.900662, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="slowmo"]
transform = Transform3D(0.999994, 0, 0, 0, 0.999994, 0, 0, 0, 0.999994, 0.00391114, 1.71017e-10, 0)
shape = SubResource("CylinderShape3D_npxaw")
debug_color = Color(0.631667, 0.35, 1, 0.909804)

[node name="resetHoop" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="resetHoop"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.493678, 0)
shape = SubResource("CylinderShape3D_vn1wo")

[node name="antiCheese" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="antiCheese"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.475301, 0)
shape = SubResource("BoxShape3D_evkxb")

[node name="hoopString" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="rings" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0112815, 0.584103, 0, -0.4773, 0.0138059, 0, 0, 0, 0.999999, -0.864055, -0.268434, 1.59564)
texture = ExtResource("2_bd8j0")

[node name="rings 2" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0115994, 0.583844, -1.25687e-08, -0.462715, 0.0130117, -0.296463, -0.163483, 0.00459719, 0.839096, -0.811501, -0.813143, 1.45267)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 3" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0132081, 0.582536, -4.64773e-08, -0.302818, 0.00746135, -0.630318, -0.469646, 0.011572, 0.406416, -0.795445, -1.40429, 0.860036)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 4" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0132078, 0.582536, -4.12849e-07, -0.0789017, 0.00194377, -0.74247, -0.553209, 0.0136307, 0.105895, -0.860796, -1.54713, 0.016492)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 5" type="Sprite3D" parent="hoopString"]
transform = Transform3D(-0.0136566, -0.582525, 9.61181e-08, 0.189102, -0.00481771, 0.705733, -0.525827, 0.0133966, 0.253801, -0.860796, -1.39181, -0.858892)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings2" type="Sprite3D" parent="hoopString"]
transform = Transform3D(-2.08692e-08, -0.584266, 0, 0.334637, -1.79006e-08, -0.71325, 0.340529, -1.82158e-08, 0.700909, -0.910137, 0.99998, -1.24166)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 6" type="Sprite3D" parent="hoopString"]
transform = Transform3D(-0.0119934, -0.583833, -3.74366e-08, 0.230992, -0.00671625, -0.785176, 0.432973, -0.012589, 0.418893, -0.955916, 1.41394, -0.651587)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 7" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0132081, 0.582536, 5.44867e-08, -0.0467879, 0.00115281, 0.747349, 0.556845, -0.0137206, 0.0627947, -0.974143, 1.55045, 0.185406)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 8" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0132081, 0.582536, -8.25594e-08, -0.34028, 0.00838454, 0.594899, 0.443255, -0.0109217, 0.456695, -0.981555, 1.12577, 0.937592)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 9" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0132081, 0.582536, -5.6915e-09, -0.520465, 0.0128242, 0.273019, 0.203424, -0.00501236, 0.698524, -0.995735, 0.411431, 1.37851)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 10" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0132081, 0.582536, -2.60132e-08, -0.551062, 0.0135781, -0.12444, -0.0927196, 0.00228461, 0.739587, -0.88392, 0.312965, -1.5913)
texture = ExtResource("2_bd8j0")

[node name="rings 11" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0136567, 0.582525, 3.16761e-08, -0.419031, 0.0106757, 0.49617, 0.369685, -0.00941859, 0.562398, -0.88392, -1.00475, -1.30701)
rotation_order = 0
texture = ExtResource("2_bd8j0")

[node name="rings 12" type="Sprite3D" parent="hoopString"]
transform = Transform3D(0.0132081, 0.582536, -3.17005e-08, -0.549495, 0.0135394, 0.136353, 0.101596, -0.00250328, 0.737485, -0.88392, -0.33361, -1.51464)
texture = ExtResource("2_bd8j0")

[node name="backPanel" type="MeshInstance3D" parent="."]
transform = Transform3D(-9.96563e-08, -3.92751, 0, 2.27987, -1.71677e-07, 0, 0, 0, 0.0849552, 0.0225797, 1.34787, -1.30111)
layers = 3
material_override = SubResource("StandardMaterial3D_vn1wo")
mesh = SubResource("BoxMesh_npxaw")

[node name="rectangle" type="Sprite3D" parent="backPanel"]
transform = Transform3D(0.0557541, -4.44089e-16, 0, -1.11022e-16, 0.0662914, 0, 0, 0, 9.0172, -0.0374056, 0.00574913, 0.533105)
texture = ExtResource("5_vn1wo")

[node name="StaticBody3D" type="StaticBody3D" parent="backPanel"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="backPanel/StaticBody3D"]
transform = Transform3D(1, 0, 0, -1.77636e-15, 1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_drutj")

[node name="HoopPuff" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.89478e-13, -2.00068, 0)
emitting = false
amount = 16
one_shot = true
speed_scale = 1.8
explosiveness = 1.0
mesh = SubResource("SphereMesh_vn1wo")
gravity = Vector3(0, -3, 0)
initial_velocity_min = 10.0
initial_velocity_max = 15.0
scale_amount_min = 0.2
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_npxaw")

[node name="ScoreSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-4.85682e-08, -1.11111, 0, 1.11111, -4.85682e-08, 0, 0, 0, 1.11111, 0, 0, 0)
stream = ExtResource("6_npxaw")
max_polyphony = 5
bus = &"tricks"

[node name="SlomoEnd" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-4.85682e-08, -1.11111, 0, 1.11111, -4.85682e-08, 0, 0, 0, 1.11111, 0, 0, 0)
stream = SubResource("AudioStreamRandomizer_evkxb")

[node name="Slomo" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-4.85682e-08, -1.11111, 0, 1.11111, -4.85682e-08, 0, 0, 0, 1.11111, 0, 0, 0)
stream = SubResource("AudioStreamRandomizer_ri3g6")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.54805, 0.47896, -1.11272)
no_depth_test = true
render_priority = 100
outline_render_priority = 90
text = "DebugLabel"
font_size = 80
outline_size = 40
horizontal_alignment = 0
vertical_alignment = 2

[node name="dunkList" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.34802, 0.47896, -1.11272)
no_depth_test = true
render_priority = 100
outline_render_priority = 90
text = "Dunks:"
font_size = 80
outline_size = 40
horizontal_alignment = 0
vertical_alignment = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="slowmo" to="." method="_on_slowmo_body_entered"]
[connection signal="body_exited" from="slowmo" to="." method="_on_slowmo_body_exited"]
[connection signal="body_exited" from="resetHoop" to="." method="_on_reset_hoop_body_exited"]
